[package]
name = "epik-query-tool"
version = "0.1.0"
edition = "2018"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
color-eyre = "0.5"
structopt = "0.3"
serde_json = "1.0"

[dependencies.tokio]
version = "1.11"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["mysql", "runtime-tokio-rustls"]
